# enrgdaq

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  message_broker.html  mkdocs.yml  models.html  pyproject.toml  requirements.txt  run.html  run_tests.html  supervisor.html  supervisor_message_handler.html
.agent/tasks/: performance_optimization.md
.github/workflows/: docs.yml  pdoc.yml  ruff.yml  test-python.yml
api/: index.html
api/cnc/: base.html  log_util.html  models.html  rest.html
api/daq/: base.html  index.html  types.html
api/tools/: benchmark_runner.html  latex_tables.html  plot_benchmarks.html
api/utils/: index.html  network.html  test.html  time.html
benchmarks/performance_report/: index.html
cnc/: base.html  index.html  log_util.html  models.html  rest.html
cnc/handlers/: base.html  heartbeat.html  index.html  req_list_clients.html  req_ping.html  req_restart_daq.html  req_restart_daqjobs.html  req_run_custom_daqjob.html  req_send_message.html  req_status.html  req_stop_daqjob.html  res_status.html
configs/: n1081b.toml.example  store_csv.toml.example  store_root.toml.example  test.toml.example
configs/disabled/: store_hdf5.toml  store_raw.toml  store_redis.toml
configs/examples/: alert_slack.toml  caen_digitizer.toml  caen_hv.toml  camera.toml  enrgdaq_supervisor_cnc_client.toml  enrgdaq_supervisor_cnc_server.toml  handle_alerts.toml  handle_stats.toml  handle_stats.toml.example  healthcheck.toml  n1081b.toml  n1081b.toml.example  pc_metrics.toml  remote.toml  (+11 more)
daq/: base.html  daq_job.html  index.html  models.html  topics.html  types.html
docs/: index.md  project_summary.md
enrgdaq/: index.html  models.html  run_tests.html  supervisor.html
project_summary/: index.html
scripts/: analyze_stats.py
search/: search_index.json
src/: benchmark.py  benchmark_graphs.py  main.html  main.py  models.html  models.py  run.py  run_tests.html  run_tests.py  supervisor.py  test_csv.py  test_entrypoint.py
tests/: index.html  test_csv.html  test_handle_alerts.html  test_handle_stats.html  test_healthcheck.html  test_n1081b.html  test_remote.html  test_slack.html  test_supervisor.html
tools/: analyze_digitizer_stats.html  benchmark_runner.html  index.html  plot_benchmarks.html
utils/: arrow_ipc.html  file.html  index.html  queue.html  shared_ring_buffer.html  subclasses.html  submodules.html  time.html  watchdog.html
(+297 files in other folders)
