[project]
name = "enrgdaq"
version = "0.1.0"
description = "DAQ for ENRG neutrino experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caen-libs>=1.1.0",
    "coloredlogs>=15.0.1",
    "msgspec>=0.18.6",
    "n1081b-sdk",
    "pymysql>=1.1.1",
    "pyzmq>=26.2.0",
    "slack-webhook>=1.0.7",
    "uproot>=5.4.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
]

[tool.uv.sources]
n1081b-sdk = { git = "https://github.com/ENRG-tr/N1081B-SDK-Python.git" }
