[project]
name = "enrgdaq"
version = "0.1.0"
description = "DAQ for ENRG neutrino experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caen-libs>=3.0.1",
    "coloredlogs>=15.0.1",
    "coverage>=7.6.10",
    "lywsd03mmc>=0.1.0 ; sys_platform == 'linux'",
    "matplotlib>=3.10.5",
    "msgspec>=0.18.6",
    "n1081b-sdk",
    "opencv-python>=4.10.0.84",
    "psutil>=6.1.1",
    "py-spy>=0.4.1",
    "pymysql>=1.1.1",
    "pyzmq>=26.2.0",
    "redis[hiredis]>=5.2.0",
    "slack-webhook>=1.0.7",
    "uproot>=5.6.8",
    "h5py>=3.11.0",
]

[tool.uv]
dev-dependencies = ["pre-commit>=4.0.1", "ruff>=0.6.9", "snakeviz>=2.2.2"]

[tool.uv.sources]
n1081b-sdk = { git = "https://github.com/ENRG-tr/N1081B-SDK-Python.git" }
