[project]
name = "enrgdaq"
version = "0.1.0"
description = "DAQ for ENRG neutrino experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caen-libs>=3.0.1",
    "coloredlogs>=15.0.1",
    "coverage>=7.6.10",
    "matplotlib>=3.10.5",
    "msgspec>=0.18.6",
    "opencv-python>=4.10.0.84",
    "psutil>=6.1.1",
    "py-spy>=0.4.1",
    "pyarrow>=17.0.0",
    "pymysql>=1.1.1",
    "pyzmq>=26.2.0",
    "redis[hiredis]>=5.2.0",
    "slack-webhook>=1.0.7",
    "uproot>=5.6.8",
    "h5py>=3.11.0",
    "lywsd03mmc-client",
    "lz4>=4.3.3",
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "tomli-w>=1.2.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
sensors = ["lywsd03mmc-client", "n1081b-sdk"]

[tool.uv]
dev-dependencies = ["pre-commit>=4.0.1", "ruff>=0.6.9", "snakeviz>=2.2.2"]

[tool.uv.sources]
n1081b-sdk = { git = "https://github.com/ENRG-tr/N1081B-SDK-Python.git" }
lywsd03mmc-client = { git = "https://github.com/furkan-bilgin/lywsd03mmc-client.git" }
